--- a/index.html
+++ b/index.html
@@ -5,24 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Daniel Gunn CV</title>
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <!--[if lt IE 9]>
-      <script src="js/html5shiv.js"></script>
-      <script src="js/respond.min.js"></script>
+      <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+      <script src="bower_components/respond/dest/respond.min.js"></script>
     <![endif]-->
   </head>
   <body>
+
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
           <div id="photo-header" class="text-center">
             <!-- PHOTO (AVATAR) -->
             <div id="photo">
-              <img src="img/gunn.jpg" alt="avatar">
+              <img src="https://avatars0.githubusercontent.com/u/2809747" alt="avatar">
             </div>
             <div id="text-header">
               <h1>Hello,<br> my name is <span>Daniel</span> and I am a Computer Science Teacher</h1>
@@ -156,6 +155,7 @@
           <!-- SKILLS -->
           <div class="box">
             <h2>Programming Languages</h2>
+
             <div class="skills">
               <div class="item-skills" data-percent="1.00">python</div>
               <div class="item-skills" data-percent="0.90">Java</div>
@@ -171,6 +171,7 @@
             </div>
           </div>
           <div class="box">
+
             <h2>Teaching Tools</h2>
             <div class="skills">
               <div class="item-skills" data-percent="1.00">Powerpoint</div>
@@ -190,7 +191,7 @@
           <div class="box">
             <h2>Languages</h2>
             <div id="language-skills">
-              <div class="skill">English <div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
+              <div class="skill">English <div class="icons pull-right"><div style="width: 100%;" class="icons-red"></div></div></div>
               <div class="skill">French <div class="icons pull-right"><div style="width: 60%;" class="icons-red"></div></div></div>
               <div class="skill">Chinese <div class="icons pull-right"><div style="width: 20%;" class="icons-red"></div></div></div>
             </div>
@@ -206,9 +207,9 @@
       </div>
     </div>
     <!-- JQUERY -->
-    <script src="js/jquery.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <!-- BOOTSTRAP -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- SCRIPTS -->
     <script src="js/scripts.js"></script>
   </body>
