--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div id="photo-header" class="text-center">
             <!-- PHOTO (AVATAR) -->
             <div id="photo">
-              <img src="https://avatars0.githubusercontent.com/u/2809747" alt="avatar">
+              <img src="img/gunn.jpg" alt="avatar">
             </div>
             <div id="text-header">
               <h1>Hello,<br> my name is <span>Daniel</span> and I am a Computer Science Teacher</h1>
@@ -74,8 +74,14 @@
             <h2>Experience</h2>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where">High School Affiliated to Renmin University of China</div>
+                <div class="where"><!--High School Affiliated to Renmin University of China-->
+                  <a href="http://www.rdfz.cn/en/">
+                  <img src="img/rdfz.png" alt="High School Affiliated to Renmin University of China" width="60%" class="img-fluid"></a>
+                </div>
                 <div class="year">2016 - Present</div>
+                <div class="year">
+
+                </div>
               </div>
               <div class="col-xs-9">
                 <div class="profession">Head of Computer Science Department / Instructor</div>
@@ -84,7 +90,10 @@
             </div>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where">Second Middle School Affiliated with Beijing Normal University</div>
+                <div class="where">
+                  <a href="http://www.shsbnu.net/">
+                  <img src="img/shsbnu.png" alt="Second Middle School Affiliated with Beijing Normal University" width="50%" class="img-fluid"></a>
+                </div>
                 <div class="year">2013-2016</div>
               </div>
               <div class="col-xs-9">
@@ -94,7 +103,11 @@
             </div>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where">LG Inc.</div>
+                <div class="where">
+                  <br>
+                  <a href="https://www.lgwebos.com/">
+                  <img src="img/lg.png" alt="LG Inc." width="70%" class="img-fluid"></a>
+                </div>
                 <div class="year">2012-2013</div>
               </div>
               <div class="col-xs-9">
@@ -104,7 +117,11 @@
             </div>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where">Palm Inc. / HP Inc.</div>
+                <div class="where">
+                  <a href="https://www.hp.com/">
+                  <img src="img/hp.png" alt="Palm Inc. / HP Inc." width="80%" class="img-fluid"></a>
+
+                </div>
                 <div class="year">2007-2011</div>
               </div>
               <div class="col-xs-9">
@@ -114,7 +131,11 @@
             </div>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where">MKS Inc.</div>
+                <div class="where">
+                  <br>
+                  <a href="https://en.wikipedia.org/wiki/MKS_Inc.">
+                  <img src="img/mks.png" alt="MKS Inc." width="80%" class="img-fluid"></a>
+                </div>
                 <div class="year">2006-2007</div>
               </div>
               <div class="col-xs-9">
@@ -142,9 +163,14 @@
               <div class="description pull-right">damngunn</div>
             </div>
             <div class="contact-item">
+              <div class="icon pull-left text-center"><span class="fa fa-linkedin fa-fw"></span></div>
+              <div class="title pull-right">LinkedIn</div>
+              <div class="description pull-right">linkedin.com/in/dmgunn</div>
+            </div>
+            <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-facebook fa-fw"></span></div>
               <div class="title pull-right">Facebook</div>
-              <div class="description pull-right">https://www.facebook.com/facebook</div>
+              <div class="description pull-right">https://www.facebook.com/peacebully</div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-skype fa-fw"></span></div>
