--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
             <h2>Programming Languages</h2>
 
             <div class="skills">
-              <div class="item-skills" data-percent="1.00">python</div>
-              <div class="item-skills" data-percent="0.90">Java</div>
+              <div class="item-skills" data-percent="0.90">python</div>
+              <div class="item-skills" data-percent="0.80">Java</div>
               <div class="item-skills" data-percent="0.80">c</div>
-              <div class="item-skills" data-percent="0.75">HTML5</div>
-              <div class="item-skills" data-percent="0.25">JavaScript</div>
+              <div class="item-skills" data-percent="0.45">HTML5</div>
+              <div class="item-skills" data-percent="0.35">JavaScript</div>
               <div class="skills-legend clearfix">
                 <div class="legend-left legend">Beginner</div>
                 <div class="legend-left legend"><span>Proficient</span></div>
@@ -200,10 +200,11 @@
 
             <h2>Teaching Tools</h2>
             <div class="skills">
-              <div class="item-skills" data-percent="1.00">Powerpoint</div>
-              <div class="item-skills" data-percent="0.90">Excel</div>
-              <div class="item-skills" data-percent="0.80">Moodle</div>
-              <div class="item-skills" data-percent="0.75">PowerTeacher</div>
+              <div class="item-skills" data-percent="0.80">Powerpoint</div>
+              <div class="item-skills" data-percent="0.80">Excel</div>
+              <div class="item-skills" data-percent="0.75">ZipGrade</div>
+              <div class="item-skills" data-percent="0.70">PowerTeacher Pro</div>
+              <div class="item-skills" data-percent="0.65">Moodle</div>
               <div class="item-skills" data-percent="0.25">Naviance</div>
               <div class="skills-legend clearfix">
                 <div class="legend-left legend">Beginner</div>
