--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
             <div class="hobby">Guitar</div>
             <div class="hobby">Fitness</div>
             <div class="hobby">Programming</div>
+            <div class="hobby">Travel</div>
           </div>
         </div>
       </div>
