--- a/index.html
+++ b/index.html
@@ -74,30 +74,52 @@
             <h2>Experience</h2>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where"><!--High School Affiliated to Renmin University of China-->
+		    <div class="where"><!-- Kings College -->
+<!--
                   <a href="http://www.rdfz.cn/en/">
-                  <img src="img/rdfz.png" alt="High School Affiliated to Renmin University of China" width="60%" class="img-fluid"></a>
+-->
+                  <img src="img/rkcshz.png" alt="Kings College HangZhou" width="60%" class="img-fluid"></a>
                 </div>
-                <div class="year">2016 - Present</div>
+                <div class="year">2018 - Present</div>
                 <div class="year">
 
                 </div>
               </div>
               <div class="col-xs-9">
-                <div class="profession">Head of Computer Science Department / Instructor</div>
-                <div class="description">Following the IB, AP, and A level curriculum, I taught a range of Chinas best students.  Teaching involves lesson planning, assignment creation and grading, examination and numerous administrative duties.   As the head of department, I am responsible for leading five other teachers through the delivery of computer science at all grade levels.</div>
+		      <div class="profession">King's College Hangzhou<br>Head of Computer Science Department</div>
+                <div class="description">Being a new school, the main responsibility is setting and planning the department: planning the CS curriculum across all school grades, planning assessment and school work, syllabus and text book planning, balancing work loads across teachers.  We currently follow IGCSE for advanced grades, and my custom curriculum for lower grade levels.</div>
+              </div>
+            </div>
+            <div class="job clearfix">
+              <div class="col-xs-3">
+                <div class="where"><!--High School Affiliated to Renmin University of China-->
+<!--
+                  <a href="http://www.rdfz.cn/en/">
+-->
+                  <img src="img/rdfz.png" alt="High School Affiliated to Renmin University of China" width="60%" class="img-fluid"></a>
+                </div>
+                <div class="year">2016 - 2018</div>
+                <div class="year">
+
+                </div>
+              </div>
+              <div class="col-xs-9">
+		      <div class="profession">RDFZ Beijing<br>Head of Computer Science Department / Instructor</div>
+                <div class="description">Following the IB, AP, and A level curriculum, I taught a range of some of Chinas strongest students.  Teaching involves lesson planning, assignment creation and grading, examination and numerous administrative duties.   As the head of department, I am responsible for leading five other teachers through the delivery of computer science at all grade levels.</div>
               </div>
             </div>
             <div class="job clearfix">
               <div class="col-xs-3">
                 <div class="where">
+<!--
                   <a href="http://www.shsbnu.net/">
+-->
                   <img src="img/shsbnu.png" alt="Second Middle School Affiliated with Beijing Normal University" width="50%" class="img-fluid"></a>
                 </div>
                 <div class="year">2013-2016</div>
               </div>
               <div class="col-xs-9">
-                <div class="profession">Math and Computer Science Teacher</div>
+		      <div class="profession">Second High School Attached to BNU<br>Math and Computer Science Teacher</div>
                 <div class="description">SHSBNU follows the GAC curriculum, and as their math and computers teacher for two years, I was responsible for this diverse range of classes. </div>
               </div>
             </div>
@@ -105,27 +127,31 @@
               <div class="col-xs-3">
                 <div class="where">
                   <br>
+<!--
                   <a href="https://www.lgwebos.com/">
+-->
                   <img src="img/lg.png" alt="LG Inc." width="70%" class="img-fluid"></a>
                 </div>
                 <div class="year">2012-2013</div>
               </div>
               <div class="col-xs-9">
-                <div class="profession">Sr Development Lead / Software Architect</div>
+		      <div class="profession">LG Inc.<br>Sr Development Lead / Software Architect</div>
                 <div class="description">Leading engineering teams for various components of the operating system of a WebOS driven Smart TV.  My role there included leading several software development teams, software architecture and design, and following the agile development methodologies.</div>
               </div>
             </div>
             <div class="job clearfix">
               <div class="col-xs-3">
                 <div class="where">
+<!--
                   <a href="https://www.hp.com/">
+-->
                   <img src="img/hp.png" alt="Palm Inc. / HP Inc." width="80%" class="img-fluid"></a>
 
                 </div>
                 <div class="year">2007-2011</div>
               </div>
               <div class="col-xs-9">
-                <div class="profession">Team Leader / Software Engineer</div>
+		      <div class="profession">HP Inc.<br>Team Leader / Software Engineer</div>
                 <div class="description">Leading teams of engineers in various projects.  Software architecture and design work.</div>
               </div>
             </div>
@@ -133,13 +159,15 @@
               <div class="col-xs-3">
                 <div class="where">
                   <br>
+<!--
                   <a href="https://en.wikipedia.org/wiki/MKS_Inc.">
+-->
                   <img src="img/mks.png" alt="MKS Inc." width="80%" class="img-fluid"></a>
                 </div>
                 <div class="year">2006-2007</div>
               </div>
               <div class="col-xs-9">
-                <div class="profession">Tactical Software Engineer</div>
+		      <div class="profession">MKS Inc.<br>Tactical Software Engineer</div>
                 <div class="description">Worked as the interface between the customer service team and the platform development team.  Working on bug detection and repair, as well as working closely with the QA team to identify and address regressions.</div>
               </div>
             </div>
@@ -150,6 +178,10 @@
           <div class="box clearfix">
             <h2>Contact</h2>
             <div class="contact-item">
+              <div class="icon pull-left text-center"><span class="fa fa-globe fa-fw"></span></div>
+              <div class="title only pull-right">https://danielgunn.github.io</div>
+</div>
+<div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-phone fa-fw"></span></div>
               <div class="title only pull-right">+86 157 1006 2517</div>
             </div>
