adding programs taught section

--- a/index.html
+++ b/index.html
@@ -212,6 +212,22 @@
           </div>
           <!-- SKILLS -->
           <div class="box">
+            <h2>Programs Taught</h2>
+
+            <div class="skills">
+              <div class="item-skills" data-percent="0.90"><a href="https://www.cambridgeinternational.org/programmes-and-qualifications/cambridge-international-as-and-a-level-computer-science-9608/">AS and A Level Computer Science</a></div>
+              <div class="item-skills" data-percent="0.80"><a href="https://apstudent.collegeboard.org/apcourse/ap-computer-science-a">AP Computer Science A</a></div>
+              <div class="item-skills" data-percent="0.80"><a href="https://www.cambridgeinternational.org/programmes-and-qualifications/cambridge-igcse-computer-science-0478/">IGCSE Computer Science</a></div>
+              <div class="item-skills" data-percent="0.45"><a href="https://www.ibo.org/programmes/diploma-programme/curriculum/sciences/computer-science/">IB Computer Science SL/HL</a></div>
+              <div class="skills-legend clearfix">
+                <div class="legend-left legend">Beginner</div>
+                <div class="legend-left legend"><span>Proficient</span></div>
+                <div class="legend-right legend"><span>Expert</span></div>
+                <div class="legend-right legend">Master</div>
+              </div>
+            </div>
+          </div>
+          <div class="box">
             <h2>Programming Languages</h2>
 
             <div class="skills">
