--- a/index.html
+++ b/index.html
@@ -248,8 +248,7 @@
 
             <h2>Teaching Tools</h2>
             <div class="skills">
-              <div class="item-skills" data-percent="0.80">Powerpoint</div>
-              <div class="item-skills" data-percent="0.80">Excel</div>
+              <div class="item-skills" data-percent="0.80">Office 365 Suite</div>
               <div class="item-skills" data-percent="0.75">ZipGrade</div>
               <div class="item-skills" data-percent="0.70">PowerTeacher Pro</div>
               <div class="item-skills" data-percent="0.65">Moodle</div>
