adding classDojo Quizlet

--- a/index.html
+++ b/index.html
@@ -251,8 +251,10 @@
               <div class="item-skills" data-percent="0.80">Office 365 Suite</div>
               <div class="item-skills" data-percent="0.75">ZipGrade</div>
               <div class="item-skills" data-percent="0.70">PowerTeacher Pro</div>
+              <div class="item-skills" data-percent="0.75">ClassDojo</div>
+              <div class="item-skills" data-percent="0.75">Quizlet</div>
               <div class="item-skills" data-percent="0.65">Moodle</div>
-              <div class="item-skills" data-percent="0.25">Naviance</div>
+              <div class="item-skills" data-percent="0.40">Naviance</div>
               <div class="skills-legend clearfix">
                 <div class="legend-left legend">Beginner</div>
                 <div class="legend-left legend"><span>Proficient</span></div>
