--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
 </div>
 <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-phone fa-fw"></span></div>
-              <div class="title only pull-right">+86 157 1006 2517</div>
+              <div class="title only pull-right">+86 137 3540 2284</div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-envelope fa-fw"></span></div>
-              <div class="title only pull-right">dangunn@qq.com</div>
+              <div class="title only pull-right">daniel.gunn@rkcshz.cn</div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-weixin fa-fw"></span></div>
