--- a/index.html
+++ b/index.html
@@ -34,12 +34,19 @@
           <!-- ABOUT ME -->
           <div class="box">
             <h2>About Me</h2>
-            <p>I am a former silicon valley engineer turned computer science teacher.  I'm loving my new passion, teaching IB, AP, and A Level.</p>
+            <p>I am a former silicon valley engineer turned computer science teacher.  I'm loving my new passion: teaching computer science</p>
           </div>
           <!-- EDUCATION -->
           <div class="box">
             <h2>Education</h2>
             <ul id="education" class="clearfix">
+              <li>
+                <div class="year pull-left">2022</div>
+                <div class="description pull-right">
+                  <h3><a href="https://cpl.oise.utoronto.ca/program_certificate/oise-certificate-in-international-education-for-ib/">University of Toronto OISE IB Certification (current)</a></h3>
+                  <p>Currently enrolled in an IB certification program offered by the University of Toronto.  To be completed in 2023</p>
+                </div>
+              </li>
               <li>
                 <div class="year pull-left">2017</div>
                 <div class="description pull-right">
@@ -74,40 +81,33 @@
             <h2>Experience</h2>
             <div class="job clearfix">
               <div class="col-xs-3">
-		    <div class="where"><!-- Kings College -->
-<!--
-                  <a href="http://www.rdfz.cn/en/">
--->
-                  <img src="img/rkcshz.png" alt="Kings College HangZhou" width="60%" class="img-fluid"></a>
+		    <div class="where">
+                  <img src="img/rdfz.png" alt="RDFZ" width="60%" class="img-fluid"></a>
                 </div>
-                <div class="year">2018 - Present</div>
+                <div class="year">2016 - Present</div>
                 <div class="year">
 
                 </div>
               </div>
               <div class="col-xs-9">
-		      <div class="profession">King's College Hangzhou<br>Head of Computer Science Department</div>
-                <div class="description">Being a new school, the main responsibility is setting and planning the department: planning the CS curriculum across all school grades, planning assessment and school work, syllabus and text book planning, balancing work loads across teachers.  We currently follow IGCSE for advanced grades, and my custom curriculum for lower grade levels.</div>
+		      <div class="profession">RDFZ<br>Head of Computer Science Department<br>Teacher</div>
+                  <div class="description">
+                      <ul>
+                          <li>Head of Computer Science department</li>
+                          <li>Head of House (Proctoral system)</li>
+                          <li>Taught AP, A level, IB SL/HL, IGCSE Computer Science</li>
+                          <li>Organized computing based activities<ul>
+                              <li>ICC Hackathon</li><li>Computing Fair</li><li>STEM week</li>
+                              </ul>
+                          </li>
+                          <li>Taught at campuses in
+                              <a href="http://icc.rdfz.cn/">ICC Beijing Haidian</a>,
+                              <a href="http://www.rdfzcygj.cn/">Beijing Chaoyang</a>,
+                              <a href="https://www.rkcshz.cn/">Hangzhou</a></li>
+                      </ul></div>
               </div>
             </div>
-            <div class="job clearfix">
-              <div class="col-xs-3">
-                <div class="where"><!--High School Affiliated to Renmin University of China-->
-<!--
-                  <a href="http://www.rdfz.cn/en/">
--->
-                  <img src="img/rdfz.png" alt="High School Affiliated to Renmin University of China" width="60%" class="img-fluid"></a>
-                </div>
-                <div class="year">2016 - 2018</div>
-                <div class="year">
 
-                </div>
-              </div>
-              <div class="col-xs-9">
-		      <div class="profession">RDFZ Beijing<br>Head of Computer Science Department / Instructor</div>
-                <div class="description">Following the IB, AP, and A level curriculum, I taught a range of some of Chinas strongest students.  Teaching involves lesson planning, assignment creation and grading, examination and numerous administrative duties.   As the head of department, I am responsible for leading five other teachers through the delivery of computer science at all grade levels.</div>
-              </div>
-            </div>
             <div class="job clearfix">
               <div class="col-xs-3">
                 <div class="where">
@@ -179,7 +179,7 @@
             <h2>Contact</h2>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-globe fa-fw"></span></div>
-              <div class="title only pull-right">https://danielgunn.github.io</div>
+              <div class="title only pull-right">https://dangunn.github.io</div>
 </div>
 <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-phone fa-fw"></span></div>
@@ -187,7 +187,7 @@
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-envelope fa-fw"></span></div>
-              <div class="title only pull-right">daniel.gunn@rkcshz.cn</div>
+              <div class="title only pull-right">dgunn@rdfzcygj.cn</div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-weixin fa-fw"></span></div>
@@ -198,16 +198,6 @@
               <div class="icon pull-left text-center"><span class="fa fa-linkedin fa-fw"></span></div>
               <div class="title pull-right">LinkedIn</div>
               <div class="description pull-right">linkedin.com/in/dmgunn</div>
-            </div>
-            <div class="contact-item">
-              <div class="icon pull-left text-center"><span class="fa fa-facebook fa-fw"></span></div>
-              <div class="title pull-right">Facebook</div>
-              <div class="description pull-right">https://www.facebook.com/peacebully</div>
-            </div>
-            <div class="contact-item">
-              <div class="icon pull-left text-center"><span class="fa fa-skype fa-fw"></span></div>
-              <div class="title pull-right">Skype</div>
-              <div class="description pull-right">danielgunn</div>
             </div>
           </div>
           <!-- SKILLS -->
@@ -244,38 +234,19 @@
               </div>
             </div>
           </div>
-          <div class="box">
-
-            <h2>Teaching Tools</h2>
-            <div class="skills">
-              <div class="item-skills" data-percent="0.80">Office 365 Suite</div>
-              <div class="item-skills" data-percent="0.75">ZipGrade</div>
-              <div class="item-skills" data-percent="0.70">PowerTeacher Pro</div>
-              <div class="item-skills" data-percent="0.75">ClassDojo</div>
-              <div class="item-skills" data-percent="0.75">Quizlet</div>
-              <div class="item-skills" data-percent="0.65">Moodle</div>
-              <div class="item-skills" data-percent="0.40">Naviance</div>
-              <div class="skills-legend clearfix">
-                <div class="legend-left legend">Beginner</div>
-                <div class="legend-left legend"><span>Proficient</span></div>
-                <div class="legend-right legend"><span>Expert</span></div>
-                <div class="legend-right legend">Master</div>
-              </div>
-            </div>
-          </div>
           <!-- LANGUAGES -->
           <div class="box">
-            <h2>Languages</h2>
+            <h2>Spoken Languages</h2>
             <div id="language-skills">
               <div class="skill">English <div class="icons pull-right"><div style="width: 100%;" class="icons-red"></div></div></div>
               <div class="skill">French <div class="icons pull-right"><div style="width: 60%;" class="icons-red"></div></div></div>
-              <div class="skill">Chinese <div class="icons pull-right"><div style="width: 20%;" class="icons-red"></div></div></div>
+              <div class="skill">Mandarin <div class="icons pull-right"><div style="width: 20%;" class="icons-red"></div></div></div>
             </div>
           </div>
           <!-- HOBBIES -->
           <div class="box">
             <h2>Hobbies</h2>
-            <div class="hobby">Guitar</div>
+            <div class="hobby">Music</div>
             <div class="hobby">Fitness</div>
             <div class="hobby">Programming</div>
             <div class="hobby">Travel</div>
